--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <java.version>1.8</java.version>
         <swagger-maven-plugin.version>3.1.8-SNAPSHOT</swagger-maven-plugin.version>
+        <swagger-core-version>1.5.21</swagger-core-version>
+        <okhttp-version>2.7.5</okhttp-version>
     </properties>
 
     <repositories>
@@ -59,7 +61,7 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-core</artifactId>
             <scope>compile</scope>
-            <version>1.5.21</version>
+            <version>${swagger-core-version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>javax.ws.rs</groupId>
@@ -71,6 +73,56 @@
             <groupId>io.swagger</groupId>
             <artifactId>swagger-jaxrs</artifactId>
             <version>1.5.21</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>${swagger-core-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>${okhttp-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>${okhttp-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.gsonfire</groupId>
+            <artifactId>gson-fire</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.threeten</groupId>
+            <artifactId>threetenbp</artifactId>
+            <version>1.3.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.5.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <type>jar</type>
+            <version>1.1.0.Final</version>
         </dependency>
     </dependencies>
 
@@ -108,6 +160,46 @@
                         <goals>
                             <goal>generate</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-codegen-maven-plugin</artifactId>
+                <version>2.3.1</version>
+                <configuration>
+                    <inputSpec>${project.basedir}/dist/swagger.yaml</inputSpec>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>java</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <language>java</language>
+                            <output>${project.basedir}/generated/java</output>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>javascript</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <language>javascript</language>
+                            <output>${project.basedir}/generated/javascript</output>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>dart</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <language>dart</language>
+                            <output>${project.basedir}/generated/dart</output>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
