--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <swagger-maven-plugin.version>3.1.8-SNAPSHOT</swagger-maven-plugin.version>
+        <swagger-maven-plugin.version>3.1.8</swagger-maven-plugin.version>
         <swagger-core-version>1.5.21</swagger-core-version>
 
         <jackson-version>2.9.8</jackson-version>
