--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
         <jackson-version>2.9.9</jackson-version>
         <jackson-threetenbp-version>2.6.4</jackson-threetenbp-version>
+        <client-lib-version>0.0.1</client-lib-version>
     </properties>
 
     <repositories>
@@ -187,7 +188,7 @@
             <plugin>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-codegen-maven-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>2.4.5</version>
                 <configuration>
                     <inputSpec>${project.basedir}/generated/swagger.yaml</inputSpec>
                     <apiPackage>${project.groupId}.api</apiPackage>
@@ -205,6 +206,13 @@
                             <language>java</language>
                             <output>${project.basedir}/generated/java</output>
                             <library>google-api-client</library>
+
+                            <configOptions>
+                                <groupId>io.quire</groupId>
+                                <artifactId>quire-api</artifactId>
+                                <artifactVersion>${client-lib-version}</artifactVersion>
+                                <artifactDescription>Quire API client</artifactDescription>
+                            </configOptions>
                         </configuration>
                     </execution>
                     <execution>
@@ -216,6 +224,13 @@
                         <configuration>
                             <language>javascript</language>
                             <output>${project.basedir}/generated/javascript</output>
+
+                            <configOptions>
+                                <projectName>quire-api</projectName>
+                                <projectVersion>${client-lib-version}</projectVersion>
+                                <projectDescription>Quire API client</projectDescription>
+                            </configOptions>
+
                         </configuration>
                     </execution>
                     <execution>
@@ -225,8 +240,14 @@
                         </goals>
                         <phase>compile</phase>
                         <configuration>
-                            <language>dart</language>
+                            <language>dart-jaguar</language>
                             <output>${project.basedir}/generated/dart</output>
+
+                            <configOptions>
+                                <pubName>quire_api</pubName>
+                                <pubVersion>${client-lib-version}</pubVersion>
+                                <pubDescription>Quire API client</pubDescription>
+                            </configOptions>
                         </configuration>
                     </execution>
                 </executions>
