--- a/tool/quire.conf
+++ b/tool/quire.conf
@@ -1,6 +1,10 @@
 server {
     listen      80;
 
+    location /  {
+        proxy_pass http://10.1.3.200;
+    }
+
     location /dev/api/ {
         alias /home/;
     }
