--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mocha": "^5.2.0",
     "gulp-mocha": "^6.0.0",
     "chakram": "^1.5.0",
+    "cheerio": "^0.22.0",
     "oatts": "1.2.3",
     "js-yaml": ">=3.13.1",
     "lodash.merge": ">=4.6.2",
