--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "node node_modules/gulp/bin/gulp.js --no-color test"
   },
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "del": "^1.1.1",
+    "gulp": "^4.0.2",
+    "del": "^7.0.0",
     "mocha": "^5.2.0",
     "gulp-mocha": "^6.0.0",
     "chakram": "^1.5.0",
@@ -18,6 +18,10 @@
     "oatts": "1.2.3",
     "js-yaml": ">=3.13.1",
     "lodash.merge": ">=4.6.2",
-    "spectacle-docs": "1.0.7"
+    "spectacle-docs": "1.0.7",
+    "sass": "^1.80.3"
+  },
+  "overrides": {
+    "node-sass": "npm:sass@^1.80.3"
   }
 }
